# aaf_deployment

aaf_bringup/: package.xml
aaf_bringup/launch/: aaf_navigation.launch
aaf_bringup/scripts/: aaf_start.sh
aaf_control_ui/: CMakeLists.txt  package.xml
aaf_logging/: CMakeLists.txt  package.xml
aaf_logging/launch/: logging.launch
aaf_logging/launch/axlaunch/: loggers.launch.xml
aaf_simulation/: CMakeLists.txt  package.xml
aaf_walking_group/: CMakeLists.txt
